sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:20: error: 'while' expected but identifier found.
    While(swapped==true)
    ^AlgBubbleSort1:21: error: '(' expected but '}' found.
}
^